--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <main>
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            Seu navegador não é compatível com isso.
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/linkedin.png" alt=""></a>
 
         </section>
     </main>
