--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
-            Seu navegador não é compatível com isso.
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compativel com isso.
+            </iframe>       
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
-            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/linkedin.png" alt=""></a>
 
