--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
             <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a>
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/linkedin.png" alt=""></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="linkedin.html" target="tela"><img src="imagens/linkedin.png" alt=""></a>
 
         </section>
     </main>
