--- a/instagram.html
+++ b/instagram.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="assets/social.css">
 </head>
 <body>
-    <img src="imagens/git-tela-g.jpeg" alt="tela do GitHub">
-    <a href="https://github.com/Grazys" target="_blank">ACESSE</a>    
+    <img src="imagens/tela-instagram-g.jpg" alt="Tela do instagram da grazi">
+    <a href="https://www.instagram.com/graziarmond/" target="_blank">ACESSE</a>    
 </body>
 </html>
