--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
+    <img src="imagens/youtube-tela-g.jpeg" alt="">
     <a href="https://www.youtube.com/channel/UCo2hU8UjH6qFG_oqoOsYS5g" target="_blank">ACESSE</a>
 </body>
 </html>
